[package]
name = "taimu"
version = "0.0.1"
description = "A Tauri App"
authors = ["Murtada al Mousawy"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
window_titles = { git = "https://github.com/HiruNya/window_titles", branch = "master", version = "0.1.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all"] }
log = "0.4.17"
env_logger = "0.9.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "psapi"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
